# github-repository-setup

./: .cspell.json  .editorconfig  .gitattributes  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  commitlint.config.js  package-lock.json  package.json  release-please-config.json
.claude/: session-summary-2026-01-24.md
.github/: CODEOWNERS  FUNDING.yml  GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  REVIEW_GUIDELINES.md  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml
.serena/: .gitignore  project.yml
docs/: BRANCHING_STRATEGIES.md  COMPATIBILITY_MATRIX.md  DATABASE_TESTING.md  FEATURE_FLAGS.md  FUTURE_IMPROVEMENTS.md  ML_PROJECTS.md  OBSIDIAN_MCP.md  QUICK_START.md  RELEASE_DRAFTER.md  SECRETS_MANAGEMENT.md  SERENA.md  WORKFLOW_CHANGELOG.md  ZOTERO_MCP.md  _config.yml  index.md
templates/: .all-contributorsrc  .cspell.json  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore-global-jetbrains  .gitignore-global-macos  .gitignore-global-windows  .gitignore-go  .gitignore-nodejs  .gitignore-python  .gitignore-rust  .gitignore-solidity  .licenseignore  .lintstagedrc  .markdownlint.json  .npmrc  .pre-commit-config.yaml  .prettierrc  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  LICENSE-APACHE-2.0  LICENSE-GPL-3.0  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  RELEASING.md  SECURITY.md  biome.json  checksums.json  codecov.yml  commitlint.config.js  deno.json  dependabot-full.yml  dependabot.yml  docker-compose.yml  (+14 more)
templates/.devcontainer/: devcontainer-dotnet.json  devcontainer-go.json  devcontainer-java.json  devcontainer-nodejs.json  devcontainer-php.json  devcontainer-python.json  devcontainer-ruby.json  devcontainer-rust.json  devcontainer.json
templates/.github/: copilot-instructions.md  release.yml
templates/.husky/: commit-msg  pre-commit
templates/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
templates/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
templates/commands/: github-release.md  github-setup.md
templates/openapi/: README.md  openapi-full.yaml  openapi-minimal.yaml
templates/otel/: README.md  docker-compose.otel.yaml  otel-collector-config.yaml
templates/scripts/: setup-branch-protection.sh
templates/serena/: project.yml
templates/serena/memories/: BIBLIOGRAPHY_SOURCES.template.md  CONCEPTS.template.md  CROSS_REFERENCES.template.md  README.md  REVISION_DECISIONS.template.md  STYLE_GUIDE.template.md
templates/skills/: github-setup.md
templates/workflows/: README.md  a11y.yml  all-contributors.yml  amazon-kdp-publish.yml  api-docs.yml  artifact-preview.yml  auto-labeler.yml  bundle-size.yml  ci-android.yml  ci-browser-extension.yml  ci-cpp.yml  ci-cross-os.yml  ci-dotnet.yml  ci-electron.yml  ci-elixir.yml  ci-flutter.yml  ci-foundry.yml  ci-go.yml  ci-godot.yml  ci-hardhat.yml  ci-ios.yml  ci-java.yml  ci-kotlin.yml  ci-ml-python.yml  ci-nodejs.yml  ci-php.yml  ci-platformio.yml  ci-python.yml  ci-react-native.yml  ci-ruby.yml  ci-rust.yml  ci-scala.yml  ci-swift.yml  ci-terraform.yml  ci-unity.yml  ci-with-services.yml  ci.yml  codecov.yml  codeql.yml  commitlint.yml  (+76 more)
(+45 files in other folders)
